# shared-assets

./: CHANGELOG.md  LICENSE  README.md  README_TEMPLATE.md  body.css  footer.css
.github/workflows/: test.yml
assets/: icon.svg.metadata.json
shared-rust/: Cargo.toml  deny.toml
shared-rust/shared-backend/: Cargo.toml
shared-rust/shared-backend/src/: app_error.rs  cookie_auth.rs  lib.rs  rate_limit.rs  session_id.rs  tracing_init.rs
shared-rust/shared-backend/src/auth/: middleware.rs  mod.rs  origin_check.rs  session.rs
shared-rust/shared-backend/src/middleware/: cors.rs  title.rs
shared-rust/shared-backend/src/security/: mod.rs
shared-rust/shared-backend/src/server/: bootstrap.rs  config.rs  mod.rs
shared-rust/shared-backend/src/server/tests/: config.rs  mod.rs
shared-rust/shared-core/: Cargo.toml
shared-rust/shared-core/src/i18n/: mod.rs  strings.rs
shared-rust/shared-frontend/: Cargo.toml
shared-rust/shared-frontend/src/: lib.rs  locale.rs  storage.rs  utils.rs
shared-rust/shared-frontend/src/components/: footer.rs  header.rs  language_switcher.rs  login.rs  mod.rs
shared-rust/shared-frontend/src/i18n/: common_strings.rs  mod.rs
shared-rust/src/: footer.rs  lib.rs
shared-rust/src/auth/: attempts.rs  middleware.rs  mod.rs
shared-rust/src/components/: footer.rs  header.rs
shared-rust/src/middleware/: mod.rs  security_headers.rs
shared-rust/src/server/: config.rs  ip.rs  mod.rs  tests.rs
styles/layout/: header.css
