[workspace]
resolver = "2"
members = [
    "shared-core",
    "shared-backend",
    "shared-frontend",
]

[workspace.package]
version = "3.0.36"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/studio2201/shared-assets"
homepage = "https://github.com/studio2201/shared-assets"
documentation = "https://github.com/studio2201/shared-assets"
rust-version = "1.96"

[workspace.dependencies]
# Platform-agnostic core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
constant_time_eq = "0.3"

# Backend
axum = "0.8"
ipnet = "2.9"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["signal", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock", "std"] }
time = { version = "0.3", features = ["std"] }
rand = { version = "0.9", features = ["std", "thread_rng"] }
axum-extra = { version = "0.10", features = ["cookie"] }

# Frontend (browser-side)
yew = { version = "0.23", features = ["csr"] }
web-sys = { version = "=0.3.98", features = [
    "Window",
    "Document",
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "Event",
    "Element",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Clipboard",
    "Selection",
    "FileReader",
    "File",
    "Blob",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Dev
serial_test = "3"
