[package]
name = "shared-backend"
description = "Server-side and backend shared assets for studio2201 companion apps."
readme = "../../README.md"
keywords = ["axum", "server", "middleware", "authentication", "cors"]
categories = ["web-programming::http-server", "authentication", "api-bindings"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
# Per-IP request-budget sliding-window rate limiter (used by app routers).
# Not needed for apps that only use the PIN-attempt limiter (`auth::attempts`).
rate_limit = []

[dependencies]
shared-core = { path = "../shared-core" }
axum = { workspace = true }
axum-extra = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
constant_time_eq = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
serial_test = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
